More GUI updates

--- a/namaste/namaste_app/static/style.css
+++ b/namaste/namaste_app/static/style.css
@@ -28,6 +28,13 @@ Version      	: 1.0
 */
 
 /************* Typography ******************/
+@font-face {
+    font-family: 'Luxurious Roman Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Luxurious Roman Regular'), url('LuxuriousRoman-Regular.woff') format('woff');
+    }
+
 *{
 	padding:0;
 	margin:0;
@@ -42,6 +49,7 @@ a,a:active,a:focus,a:hover{
 	outline:none!important;
 	text-decoration:none;
 }
+/*color:#333;*/
 a{
 	-webkit-transition:all 0.2s ease-in-out;
 	-moz-transition:all 0.2s ease-in-out;
@@ -51,7 +59,7 @@ a{
 	color:#333;
 }
 a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 input:focus,
 textarea:focus,
@@ -65,6 +73,8 @@ ol{
 	margin:0;
 	list-style-type:none;
 }
+/*font-family: 'Poppins', sans-serif;*/
+/*font-family: 'Luxurious Roman', serif;*/
 body{
 	font-family: 'Poppins', sans-serif;
 	background:#fff;
@@ -72,6 +82,8 @@ body{
 	position:relative;
 	overflow-x:hidden;
 }
+/*color:#333;*/
+/*font-family: 'Poppins', sans-serif;*/
 h1,
 h2,
 h3,
@@ -79,7 +91,10 @@ h4,
 h5,
 h6{
 	color:#333;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Luxurious Roman', serif;
+}
+.hero-text h1 {
+    color: white;
 }
 h1 {
     font-weight: 600;
@@ -156,7 +171,7 @@ p {
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
-	background-color: #7d3c92;
+	background-color: #DF8710;
 	opacity: 0.6;
 	position: absolute;
 	top: 0;
@@ -197,10 +212,10 @@ p {
 }
 .btn.btn-default{
 	line-height: 26px;
-    border: 2px solid #7d3c92;
+    border: 2px solid #DF8710;
     border-radius: 27px;
     padding: 12px 30px;
-    color: #7d3c92;
+    color: #DF8710;
     font-weight: 500;
 	text-transform:capitalize;
 	box-shadow:none!important;
@@ -210,25 +225,25 @@ p {
 .btn-primary:not(:disabled):not(.disabled):active, 
 .show>.btn-primary.dropdown-toggle{
 	line-height: 26px;
-    border: 2px solid #7d3c92;
+    border: 2px solid #DF8710;
     border-radius: 27px;
     padding: 12px 35px;
     color: #fff;
     font-weight: 500;
-	background:#7d3c92;
+	background:#DF8710;
 	text-transform:capitalize;
 	opacity:1;
 	box-shadow:none!important;
 }
 .btn-primary:hover{
-	color:#7d3c92;
-	border-color:#7d3c92;
+	color:#DF8710;
+	border-color:#DF8710;
 	background:none;
 }
 .btn.btn-default:hover{
-	background:#7d3c92;
+	background:#DF8710;
 	color:#fff;
-	border-color:#7d3c92;
+	border-color:#DF8710;
 }
 .btn.focus, .btn:focus {
     outline: 0;
@@ -300,10 +315,11 @@ section{
 .navbar .navbar-nav .nav-item{
 	position:relative;
 }
+/*color: #777777;*/
 .navbar .navbar-nav .nav-link{
 	padding: 13px 10px;
     font-size: 16px;
-    color: #777777;
+    color: white;
     line-height: 24px;
     font-weight: 400;
 	text-transform:capitalize;
@@ -352,20 +368,21 @@ section{
 	visibility:visible;
 }
 /*#fff*/
+/*background: #7d3c92;*/
 .navbar .navbar-nav .nav-item.btn-appointment .nav-link{
-	background: #7d3c92;
+	background: black;
     color: #fff;
     padding: 11px 30px;
     border-radius: 25px;
     text-transform: uppercase;
-    border: 2px solid #7d3c92;
+    border: 2px solid black;
 }
 .navbar .navbar-nav .nav-item.btn-appointment.active .nav-link{
 	color:#fff;
 }
 .navbar .navbar-nav .nav-item.btn-appointment .nav-link:hover{
-	color:#7d3c92;
-	background-color:transparent;
+	color:black;
+	background-color:#DF8710;
 }
 .navbar .navbar-nav .nav-item.btn-appointment{
 	margin-left:15px;
@@ -378,7 +395,7 @@ section{
 }
 .navbar .navbar-nav .nav-item.active .nav-link,
 .navbar .navbar-nav .nav-link:hover{
-	color:#7d3c92;
+	color:black;
 } 
 .navbar-toggler{
 	padding:0;
@@ -498,14 +515,14 @@ section{
 	height:14px;
 	background:#fff;
 	border-radius:50%;
-	border:2px solid #7d3c92;
+	border:2px solid #DF8710;
 	margin:0 0 10px;
 }
 .carousel-indicators li:last-child{
 	margin:0;
 }
 .carousel-indicators li.active{
-	background:#7d3c92;
+	background:#DF8710;
 }
 
 /*======================================== Services =============================*/
@@ -597,7 +614,7 @@ section{
 	display:inline-block;
 }
 .play-button a:hover .fa{
-	background:#7d3c92;
+	background:#DF8710;
 	color:#fff;
 }
 .play-button a .fa{
@@ -609,7 +626,7 @@ section{
 	width:100px;
 	text-align:center;
 	font-size:24px;
-	color:#7d3c92;
+	color:#DF8710;
 	position:relative;
 	z-index:6;
 	-webkit-transition:all 0.3s ease-in-out;
@@ -732,7 +749,7 @@ iframe {
 	top:0;
 	content:"\f18e";
 	font-family:FontAwesome;
-	color:#7d3c92;
+	color:#DF8710;
 }
 
 /*======================================== Pricing Plan =============================*/
@@ -818,7 +835,7 @@ iframe {
 	line-height:24px;
 }
 .pricing-table h2{
-	color:#7d3c92;
+	color:#DF8710;
 	font-weight:500;
 	margin:0 0 27px;
 }
@@ -848,7 +865,7 @@ iframe {
 	top:0;
 	left:0;
 	content:'';
-	background:#7d3c92;
+	background:#DF8710;
 	opacity:0;
 	visibility:hidden;
 	-webkit-transition:all 0.3s ease-in-out;
@@ -976,7 +993,7 @@ iframe {
     position: absolute;
     left: 0;
     content: '';
-    background: #7d3c92;
+    background: #DF8710;
     bottom: 0;
 }
 .breadcrumb{
@@ -984,7 +1001,7 @@ iframe {
 	background:none;
 }
 .breadcrumb li a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .breadcrumb-item{
 	text-transform:capitalize;
@@ -1027,7 +1044,7 @@ iframe {
     width: 100%;
     float: left;
     height: auto;
-	background:#7d3c92;
+	background:#DF8710;
 	padding:25px 10px 25px;
 	border-radius:0 0 5px 5px;
 	position:absolute;
@@ -1109,7 +1126,7 @@ iframe {
     font-size: 35px;
 }
 .features-info:hover{
-	background:#7d3c92;
+	background:#DF8710;
 }
 .features-info:hover h3,
 .features-info:hover span.counter{
@@ -1162,7 +1179,7 @@ iframe {
 	width:100%;
 	float:left;
 	height:auto;
-	border:1px solid #7d3c92;
+	border:1px solid #DF8710;
 	-webkit-border-radius:5px;
 	-moz-border-radius:5px;
 	border-radius:5px;
@@ -1189,7 +1206,7 @@ iframe {
 .author-comment::after {
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 10px solid #7d3c92;
+    border-top: 10px solid #DF8710;
     position: absolute;
     left: 19px;
     content: '';
@@ -1198,7 +1215,7 @@ iframe {
 }
 .quote .fa{
 	font-size:40px;
-	color:#7d3c92;
+	color:#DF8710;
 }
 .owl-dots{
 	width:100%;
@@ -1210,7 +1227,7 @@ iframe {
 	display:inline-block;
 	width:12px;
 	height:12px;
-	border:1px solid #7d3c92;
+	border:1px solid #DF8710;
 	outline:none;
 	-webkit-border-radius:6px;
 	-moz-border-radius:6px;
@@ -1218,7 +1235,7 @@ iframe {
 	margin:0 5px;
 }
 .owl-carousel .owl-dots .owl-dot.active{
-	background:#7d3c92;
+	background:#DF8710;
 	width:25px;
 }
 
@@ -1259,7 +1276,7 @@ a.btn.btn-link {
 	text-decoration:none;
 }
 a.btn.btn-link:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 a.btn.btn-link .fa{
 	-webkit-transition:all 0.3s ease-in-out;
@@ -1278,7 +1295,7 @@ a.btn.btn-link:hover .fa{
 	display:block;
 }
 .news-block h3 a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .overlay{
 	width:100%;
@@ -1321,7 +1338,7 @@ a.btn.btn-link:hover .fa{
 }
 .overlay a:hover{
 	background:#fff;
-	color:#7d3c92;
+	color:#DF8710;
 }
 .news-bottom{
 	width:100%;
@@ -1339,7 +1356,7 @@ a.btn.btn-link:hover .fa{
 	color:#333;
 }
 .post-meta li a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .pagination-container {
     width: 100%;
@@ -1374,8 +1391,8 @@ a.btn.btn-link:hover .fa{
 .pagination > li > a:hover, 
 .pagination > li >span:focus, 
 .pagination > li > span:hover{
-	background-color: #7d3c92;
-    border-color: #7d3c92;
+	background-color: #DF8710;
+    border-color: #DF8710;
 	color:#fff;
 }
 blockquote {
@@ -1384,7 +1401,7 @@ blockquote {
     color: #929292;
     padding: 20px 20px;
     margin: 0 0 25px;
-    border-left: 5px solid #7d3c92;
+    border-left: 5px solid #DF8710;
     background: #f8faff;
 }
 .news-details{
@@ -1470,7 +1487,7 @@ blockquote {
 	margin:0 0 15px;
 }
 .author-desc a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .sidebar{
 	width:100%;
@@ -1495,7 +1512,7 @@ blockquote {
 	left:0;
 	bottom:0;
 	height:2px;
-	background:#7d3c92;
+	background:#DF8710;
 	content:'';
 }
 .search-submit {
@@ -1505,7 +1522,7 @@ blockquote {
     height: 38px;
     padding: 0 8px;
     text-transform: uppercase;
-	background:#7d3c92;
+	background:#DF8710;
 }
 .category-list,
 .archive-list{
@@ -1535,7 +1552,7 @@ blockquote {
 }
 .category-list li a:hover,
 .archive-list li a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .tag-list li{
 	width:auto;
@@ -1556,8 +1573,8 @@ blockquote {
 }
 .tag-list li a:hover{
 	color:#fff;
-	border-color:#7d3c92;
-	background:#7d3c92;
+	border-color:#DF8710;
+	background:#DF8710;
 }
 .comment-form .form-control::-moz-placeholder,
 .comment-form .form-control{
@@ -1569,7 +1586,7 @@ blockquote {
 	font-size:16px;
 	text-align:center;
 	border:none;
-	background:#7d3c92;
+	background:#DF8710;
 	color:#fff;
 	cursor:pointer;
 	border-radius:0 3px 3px 0;
@@ -1580,7 +1597,7 @@ blockquote {
     color: #333;
 }
 .list-inline-item .fa{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .sidebar-widget{
 	padding:20px;
@@ -1610,11 +1627,11 @@ blockquote {
 	transition:all 0.3s ease-in-out;
 }
 .contact-info:hover{
-	border-color:#7d3c92;
+	border-color:#DF8710;
 }
 .contact-info .fa{
 	font-size:30px;
-	color:#7d3c92;
+	color:#DF8710;
 	margin:0 0 20px;
 }
 .contact-info p{
@@ -1625,7 +1642,7 @@ blockquote {
 	color:inherit;
 }
 .contact-info p a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .form-control{
 	height:54px;
@@ -1637,7 +1654,7 @@ blockquote {
 	border-radius:3px;
 }
 .form-control:focus{
-	border-color:#7d3c92;
+	border-color:#DF8710;
 }
 .form-control::-moz-placeholder{
 	color:#999;
@@ -1671,9 +1688,10 @@ blockquote {
 	height:auto;
 }
 .footer-widget h3{
-	color:#fff;
+	color:#DF8710;
 	margin:0 0 30px;
 }
+
 .footer-widget p{
 	color:#999;
 	margin:0;
@@ -1695,7 +1713,7 @@ blockquote {
 	color:#999;
 }
 .footer-top ul li a:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 .footer-widget .fa{
 	width:20px;
@@ -1726,7 +1744,7 @@ blockquote {
 .back-top a{
 	width: 40px;
 	line-height: 40px;
-	background: #7d3c92;
+	background: #DF8710;
 	color: #fff;
 	display: inline-block;
 	border-radius: 5px;
@@ -1767,7 +1785,7 @@ blockquote {
 	z-index:99;
 }
 .close:hover{
-	color:#7d3c92;
+	color:#DF8710;
 }
 #reservation-form{
 	width:100%;
@@ -1797,7 +1815,7 @@ blockquote {
 }
 .chosen-container-active.chosen-with-drop .chosen-single{
 	box-shadown:none;
-	border-color:#7d3c92;
+	border-color:#DF8710;
 }
 .chosen-container .chosen-results{
 	margin:0;
@@ -1806,7 +1824,7 @@ blockquote {
 }
 .chosen-container .chosen-drop{
 	box-shadown:none;
-	border-color:#7d3c92;
+	border-color:#DF8710;
 }
 .chosen-container .chosen-results li{
 	padding:10px 15px;
@@ -1816,7 +1834,7 @@ blockquote {
 	cursor:pointer;
 }
 .chosen-container .chosen-results li.active-result.highlighted{
-	color:#7d3c92;
+	color:#DF8710;
 	background:#f5f5f5;
 }
 .chosen-container-single .chosen-single div {
@@ -1862,7 +1880,7 @@ blockquote {
     color: #f00;
 }
 .modal .form-control:focus{
-	border-color:#7d3c92;
+	border-color:#DF8710;
 }
 .bootstrap-timepicker-widget.dropdown-menu{
 	left:38px;
@@ -1880,9 +1898,9 @@ input[type="submit"].btn.btn-primary{
 	border:2px solid transparent;
 }
 input[type="submit"].btn.btn-primary:hover{
-	color:#7d3c92;
+	color:#DF8710;
 	background:none;
-	border-color:#7d3c92;
+	border-color:#DF8710;
 }
 
 /*======================================== Responsive Design =============================*/
