--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %} {% block title %} ABOUT US {% endblock %}
+{% extends "base.html" %} {% block title %} - Sobre Nosotros {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 	
-	<section class="inner-page-banner" style="background-image:url(/static/img/banner/about-banner.jpg)">
+	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/sobre_nosotros.jpg)">
 		<div class="page-banner-caption">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>About Us</h1>
+						<h1>Sobre Nosotros</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">About us</li>
+							<li class="breadcrumb-item active">Sobre Nosotros</li>
 						</ol>
 					</div>
 				</div>
