--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>NAMASTE - {% block title %}{% endblock %}</title>
+    <title>Namaste {% block title %}{% endblock %}</title>
 	<link rel="shortcut icon" href="/static/img/namaste/favicon-32x32.png" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/img/namaste/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/static/img/namaste/android-chrome-192x192.png">
@@ -29,6 +29,9 @@
 	<link href="/static/css/datepicker.css" rel="stylesheet">
 	<!-- Font-awesome -->
 	<link rel="stylesheet" href="/static/fonts/font-awesome/css/font-awesome.min.css">
+    <!-- Font-awesome2 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 	<!-- Google font-->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700,800,900" rel="stylesheet">
 	<!-- Main CSS -->
@@ -50,7 +53,7 @@
 	<nav class="navbar navbar-expand-lg bg-white">
 		<div class="container">
 			<a class="navbar-brand" href="{% url 'home' %}">
-                <img src="/static/img/namaste/colored_buddha_logo.jpg" alt="Logo">
+                <img src="/static/img/namaste/colored_buddha_logo (1).jpg" alt="Logo">
             </a>
 			<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#main-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -115,11 +118,11 @@
 					</div>
 					<div class="col-md-3">
 						<div class="footer-widget">
-							<h3>Business hour</h3>
+							<h3>Horas de Operaciones</h3>
 							<ul class="bussiness-hour">
-								<li>Monday-Friday: <span class="pull-right">9am - 4pm.</span></li>
-								<li>Saturday: <span class="pull-right">09am - 12pm.</span></li>
-								<li>Sunday: <span class="pull-right">Closed.</span></li>
+								<li>Lunes-Viernes: <span class="pull-right">9am - 4pm.</span></li>
+								<li>Sabado: <span class="pull-right">09am - 12pm.</span></li>
+								<li>Domingo: <span class="pull-right">Closed.</span></li>
 							</ul>
 						</div>
 					</div>
@@ -136,10 +139,10 @@
 					</div>
 					<div class="col-sm-12 col-md-6">
 						<ul class="social-icons pull-right">
-							<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
 				</div>
