--- a/namaste/namaste_app/templates/contact-us.html
+++ b/namaste/namaste_app/templates/contact-us.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %} {% block title %} CONTACT US {% endblock %}
+{% extends "base.html" %} {% block title %} - Contacto {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 	
-	<section class="inner-page-banner" style="background-image:url(/static/img/banner/contact-banner.jpg)">
+	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/contact_us_banner.jpg)">
 		<div class="page-banner-caption">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Contact Us</h1>
+						<h1>Contactanos</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Contact Us</li>
+							<li class="breadcrumb-item active">Contacto</li>
 						</ol>
 					</div>
 				</div>
