--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} HOME {% endblock %}
+{% extends "base.html" %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -15,10 +15,10 @@
                                     }
                                 </style>
 								<div class="hero-text margin-adjust">
-									<h6 class="animated fadeInDown">Consetetur Adipiscing</h6>
+									<!-- <h6 class="animated fadeInDown">Consetetur Adipiscing</h6> -->
 									<h1 class="animated fadeInUp">NAMASTE</h1>
-									<p class="animated fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt ullamcorper magna, in tincidunt ex auctor et.</p>
-									<a href="{% url 'contact' %}" class="btn btn-primary animated fadeInUp">Contact Us</a>
+									<!-- <p class="animated fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt ullamcorper magna, in tincidunt ex auctor et.</p> -->
+									<a href="{% url 'contact' %}" class="btn btn-primary animated fadeInUp">RESERVA AHORA</a>
 								</div>
 							</div>
 						</div>
@@ -34,8 +34,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Our Services</span></h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
+						<h2><span>Masajes</span></h2>
+						<p>Relájate del estrés de la vida diaria mientras manos expertas amasan la tensión, dejándote sintiéndote renovado y revitalizado.</p>
 					</div>
 				</div>
 			</div>
@@ -46,9 +46,9 @@
 							<a href="{% url 'service' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Herbal Spa</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Masaje Sueco</a></h3>
+							<p>Este masaje, inspirado en las prácticas suizas de bienestar, utiliza movimientos precisos y presión controlada para liberar la tensión muscular y mejorar la circulación.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -59,9 +59,9 @@
 							<a href="{% url 'service' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Stone Message</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Post-Operatorio</a></h3>
+							<p>Experimenta el poder curativo de un masaje postoperatorio, diseñado para promover la recuperación después de una cirugía.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -72,16 +72,16 @@
 							<a href="{% url 'service' %}"><img src="/static/img/namaste/prenatal_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Stone Message</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Masaje Prenatal</a></h3>
+							<p>Disfruta de un masaje prenatal diseñado específicamente para mujeres embarazadas, que ofrece alivio y relajación durante esta etapa especial de la vida.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'services' %}" class="btn btn-primary">All Services</a>
+					<a href="{% url 'services' %}" class="btn btn-primary">Mas Servicios</a>
 				</div>
 			</div>
 		</div>
@@ -101,21 +101,76 @@
 				</div>
 				<div class="col-sm-12 col-md-6">
 					<div class="text-block wow fadeIn">
-						<h2>Why Choose us?</h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
-						<ul>
-							<li>Created from natural herbs</li>
-							<li>100% safe for your skin</li>
-							<li>Unique from other spa treatments</li>
-							<li>Created by medical professionals of spa lab</li>
-							<li>Special gifts & offers for you</li>
-						</ul>
+                        <p>Disfruta de Nuestros Tratamientos</p>
+						<h2>REVITALIZA TU MENTE, CUERPO Y ESPÍRITU</h2>
+                        <p>
+                            Descubre la verdadera relajación con nuestros tratamientos indulgentes, meticulosamente diseñados para disipar la tensión y restaurar el equilibrio en tu mente, cuerpo y espíritu. Desde nuestros lujosos masajes suizos hasta nuestras sesiones de desintoxicación dorada rejuvenecedoras, cada tratamiento está adaptado para dejarte sintiéndote refrescado, revitalizado y renovado.
+                        </p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- end why choose -->
+
+    <section class="section-spacing">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="section-title text-center">
+						<h2><span>Tratamientos</span></h2>
+						<p>Deja atrás el estrés y renueva tu energía con nuestros tratamientos de masaje personalizados, diseñados para aliviar los dolores musculares y proporcionarte una sensación de calma y renovación.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Depilación</a></h3>
+							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Mesoterapia</a></h3>
+							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+                <div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Vacuslim</a></h3>
+							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+			
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<a href="{% url 'services' %}" class="btn btn-primary">Mas Servicios</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end treatments -->
 	
 	<section class="section-spacing">
 		<div class="container">
@@ -195,8 +250,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Our gallery</span></h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
+						<h2><span>Explora Nuestra Galeria</span></h2>
 					</div>
 				</div>
 			</div>
@@ -296,7 +350,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="appoinment-img text-md-right text-center wow fadeIn">
-						<img class="tilt-img" src="/static/img/appointment/1.png" alt="">
+						<img class="tilt-img" src="/static/img/namaste/calendar.jpg" alt="">
 					</div>
 				</div>
 			</div>			
@@ -309,8 +363,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Meet Our Experts</span></h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
+						<h2><span>Nuestro Equipo</span></h2>
 					</div>
 				</div>
 			</div>
@@ -322,17 +375,17 @@
 							<img src="/static/img/team/1.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Tasfia</h3>
-							<h6>Hair Expert</h6>
+							<h3>Jennys</h3>
+							<h6>Experta en Masajes y Tratamientos</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Tasfia</h3>
-							<h6>Hair Expert</h6>
+							<h3>Jennys</h3>
+							<h6>Experta en Masajes y Tratamientos</h6>
 							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -344,17 +397,17 @@
 							<img src="/static/img/team/2.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Salina Gomej</h3>
-							<h6>Message Expert</h6>
+							<h3>Sally</h3>
+							<h6>Terapista de Masaje</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Salina Gomej</h3>
-							<h6>Message Expert</h6>
+							<h3>Sally</h3>
+							<h6>Terapista de Masaje</h6>
 							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -366,17 +419,17 @@
 							<img src="/static/img/team/3.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Julia Shorez</h3>
-							<h6>Skin Therapist</h6>
+							<h3>Julia</h3>
+							<h6>Terapista de Masaje</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Julia Shorez</h3>
-							<h6>Skin Therapist</h6>
+							<h3>Julia</h3>
+							<h6>Terapista de Masaje</h6>
 							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -388,17 +441,17 @@
 							<img src="/static/img/team/4.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Sharmin Akter</h3>
-							<h6>Therapy Expert</h6>
+							<h3>Sharnice</h3>
+							<h6>Terapista de Masaje</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Sharmin Akter</h3>
-							<h6>Therapy Expert</h6>
+							<h3>Sharnice</h3>
+							<h6>Terapista de Masaje</h6>
 							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -407,7 +460,7 @@
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="team.html" class="btn btn-primary">View Our Experts</a>
+					<a href="#" class="btn btn-primary">Conozca Nuestro Equipo</a>
 				</div>
 			</div>
 		</div>
@@ -460,8 +513,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Happy Clients</span></h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
+						<h2><span>Clientes Contentos</span></h2>
 					</div>
 				</div>
 			</div>
@@ -472,15 +524,15 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with ‘real’ content. This is required when, for example, the final text is not yet available.</p>
+						<p>Llevo mucho tiempo viniendo aqui y es el mejor sitio. Jennys es una experta en su arte. Se los recomiendo 100%</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/testimonials/1.png" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">David Warner</span>
-							<span class="designation"><em>Envato Customer</em></span>
+							<span class="author-name">Juana Mancha</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
 				</div>
@@ -489,15 +541,15 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with ‘real’ content. This is required when, for example, the final text is not yet available.</p>
+						<p>No busquen mas que aqui es tu destino. El Vacuslim me tiene al dia.</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/testimonials/2.png" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Alex Smith</span>
-							<span class="designation"><em>Envato Customer</em></span>
+							<span class="author-name">Ricardo Arroyo</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
 				</div>
@@ -506,15 +558,15 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with ‘real’ content. This is required when, for example, the final text is not yet available.</p>
+						<p>Llevo 5 años viniendo aqui. Mejor sitio para masajes.</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/testimonials/3.png" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">David Warner</span>
-							<span class="designation"><em>Envato Customer</em></span>
+							<span class="author-name">Victoria de Gloria</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
 				</div>
@@ -523,15 +575,15 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with ‘real’ content. This is required when, for example, the final text is not yet available.</p>
+						<p>Me toco Jenny's. Hizo tremendo trabajo, de seguro regreso.</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/testimonials/1.png" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Alex Smith</span>
-							<span class="designation"><em>Envato Customer</em></span>
+							<span class="author-name">Pancho Santos</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
 				</div>
