--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %} {% block title %} SERVICES {% endblock %}
+{% extends "base.html" %} {% block title %} - Servicios {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 	
-	<section class="inner-page-banner" style="background-image:url(/static/img/banner/services-banner.jpg)">
+	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/services_hero_banner.jpg)">
 		<div class="page-banner-caption">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Our Services</h1>
+						<h1>Servicios</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Our Services</li>
+							<li class="breadcrumb-item active">Servicios</li>
 						</ol>
 					</div>
 				</div>
@@ -24,8 +24,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Our Services</span></h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
+						<h2><span>Masajes Y Tratamientos</span></h2>
+						<p>Relájate del estrés de la vida diaria mientras manos expertas amasan la tensión, dejándote sintiéndote renovado y revitalizado.</p>
 					</div>
 				</div>
 			</div>
@@ -33,12 +33,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/services/1.jpg" alt=""></a>
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Herbal Spa</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Masaje Sueco</a></h3>
+							<p>Este masaje, inspirado en las prácticas suizas de bienestar, utiliza movimientos precisos y presión controlada para liberar la tensión muscular y mejorar la circulación.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -46,12 +46,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/services/2.jpg" alt=""></a>
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Stone Message</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Post-Operatorio</a></h3>
+							<p>Experimenta el poder curativo de un masaje postoperatorio, diseñado para promover la recuperación después de una cirugía.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -59,12 +59,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/services/3.jpg" alt=""></a>
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/prenatal_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Body Message</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Masaje Prenatal</a></h3>
+							<p>Disfruta de un masaje prenatal diseñado específicamente para mujeres embarazadas, que ofrece alivio y relajación durante esta etapa especial de la vida.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -72,12 +72,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/services/5.jpg" alt=""></a>
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/deep_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Aromatherapy</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Masaje Profundo</a></h3>
+							<p>Sumérgete en una experiencia revitalizante con nuestro masaje de tejido profundo, diseñado para liberar la tensión muscular y aliviar los nudos de estrés acumulados.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -85,12 +85,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/services/2.jpg" alt=""></a>
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/golden_detox.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Stone Message</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Detox De Oro</a></h3>
+							<p>Técnica creada en Colombia la cual consiste y tiene como función principal desintoxicar, desinflamar, y moldear con un buen drenaje.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -98,17 +98,147 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/services/3.jpg" alt=""></a>
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Body Message</a></h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Read More</a>
+							<h3><a href="{% url 'service' %}">Vacuslim</a></h3>
+							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+			
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Depilación</a></h3>
+							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/wood_therapy.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Terapia De Madera</a></h3>
+							<p>Nuestra terapia de madera, una técnica ancestral que utiliza instrumentos de madera natural para estimular la circulación, reducir la celulitis y tonificar la piel.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/metal_therapy.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Terapia De Metal</a></h3>
+							<p>El metal se desliza suavemente sobre la piel, liberando la tensión muscular, mejorando la circulación y promoviendo una sensación de bienestar profundo.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Drenaje</a></h3>
+							<p>Nuestro masaje de drenaje linfático, una técnica suave y terapéutica diseñada para estimular el sistema linfático y promover la eliminación de toxinas del cuerpo.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Quiromasaje</a></h3>
+							<p>Consiste en un conjunto de técnicas que tienen como función mejorar los problemas del paciente de acuerdo a sus necesidades.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/bamboo_therapy (1).jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Masaje Profundo</a></h3>
+							<p>Sumérgete en una experiencia revitalizante con nuestro masaje de tejido profundo, diseñado para liberar la tensión muscular y aliviar los nudos de estrés acumulados.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/hot_rocks (1).jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Piedras Calientes</a></h3>
+							<p>Esta técnica ancestral combina el poder curativo del calor con los beneficios terapéuticos del masaje, ayudándote a liberar la tensión muscular y promover una sensación de bienestar completa.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/cup_therapy (1).jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Copas Chinas</a></h3>
+							<p>Esta técnica milenaria, utilizada en la medicina tradicional china, ofrece una manera efectiva de aliviar la tensión muscular y mejorar la circulación.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/massage_gun (1).jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Pistole De Masaje</a></h3>
+							<p>Esta herramienta de vanguardia utiliza percusiones rápidas y profundas para estimular los músculos, aliviar la tensión y mejorar la circulación sanguínea.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'service' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'service' %}">Mesoterapia</a></h3>
+							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
+							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<a href="{% url 'contact' %}" class="btn btn-primary">Contact us</a>
