--- a/namaste/namaste_app/templates/service-single.html
+++ b/namaste/namaste_app/templates/service-single.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} SERVICE1 {% endblock %}
+{% extends "base.html" %} {% block title %} - Servicio {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 
